--- a/analise_erick.ipynb
+++ b/analise_erick.ipynb
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -70,52 +70,14 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "        <script type=\"text/javascript\">\n",
-              "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
-              "        if (window.MathJax && window.MathJax.Hub && window.MathJax.Hub.Config) {window.MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-              "        if (typeof require !== 'undefined') {\n",
-              "        require.undef(\"plotly\");\n",
-              "        requirejs.config({\n",
-              "            paths: {\n",
-              "                'plotly': ['https://cdn.plot.ly/plotly-2.35.2.min']\n",
-              "            }\n",
-              "        });\n",
-              "        require(['plotly'], function(Plotly) {\n",
-              "            window._Plotly = Plotly;\n",
-              "        });\n",
-              "        }\n",
-              "        </script>\n",
-              "        "
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "        <script type=\"text/javascript\">\n",
-              "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
-              "        if (window.MathJax && window.MathJax.Hub && window.MathJax.Hub.Config) {window.MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-              "        if (typeof require !== 'undefined') {\n",
-              "        require.undef(\"plotly\");\n",
-              "        requirejs.config({\n",
-              "            paths: {\n",
-              "                'plotly': ['https://cdn.plot.ly/plotly-2.35.2.min']\n",
-              "            }\n",
-              "        });\n",
-              "        require(['plotly'], function(Plotly) {\n",
-              "            window._Plotly = Plotly;\n",
-              "        });\n",
-              "        }\n",
-              "        </script>\n",
-              "        "
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.12.6' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: 'c:/Users/ErickBrenoPontesPio/AppData/Local/Microsoft/WindowsApps/python3.12.exe -m pip install ipykernel -U --user --force-reinstall'"
+          ]
         }
       ],
       "source": [
@@ -608,10 +570,15 @@
         }
       ],
       "source": [
+        "from matplotlib.ticker import PercentFormatter\n",
+        "\n",
         "plt.figure(figsize=(16,6))\n",
-        "plt.ylabel('Densidade')\n",
         "plt.title('Distribuição de empréstimo por pontuação')\n",
-        "sns.distplot(df['fico'], kde=True)"
+        "ax = sns.distplot(df['fico'], kde=True)\n",
+        "ax.yaxis.set_major_formatter(PercentFormatter(1))\n",
+        "plt.xlabel(\"SCORE\")\n",
+        "plt.ylabel(\"Densidade\")\n",
+        "plt.show()"
       ]
     }
   ],
