--- a/analise_01.ipynb
+++ b/analise_01.ipynb
@@ -2,18 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
         "%%capture\n",
         "%matplotlib inline\n",
-        "!pip install polars matplotlib seaborn plotly cufflinks"
+        "%pip install polars matplotlib seaborn plotly cufflinks"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -86,18 +86,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
       "metadata": {
         "id": "3ifjkohOmTWV"
       },
       "outputs": [],
       "source": [
-        "df = pl.read_csv('dados_clube_emprestimo.csv')"
+        "df = pl.read_csv('data/dados_clube_emprestimo.csv')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -159,7 +159,7 @@
               "└────────────┴────────────┴──────────┴───────────┴───┴───────────┴───────────┴─────────┴───────────┘"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -212,7 +212,7 @@
               "└────────────┴────────────┴──────────┴───────────┴───┴───────────┴───────────┴─────────┴───────────┘"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -252,7 +252,7 @@
               "        ('not.fully.paid', Int64)])"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -306,7 +306,7 @@
               "└────────────┴───────────┴───────────┴──────────┴───┴───────────┴───────────┴──────────┴───────────┘"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -360,7 +360,7 @@
               "└────────────┴────────────┴──────────┴───────────┴───┴───────────┴───────────┴─────────┴───────────┘"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -392,7 +392,7 @@
               "  white-space: pre-wrap;\n",
               "}\n",
               "</style>\n",
-              "<small>shape: (2, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>credit.policy</th><th>count</th></tr><tr><td>i64</td><td>u32</td></tr></thead><tbody><tr><td>1</td><td>7710</td></tr><tr><td>0</td><td>1868</td></tr></tbody></table></div>"
+              "<small>shape: (2, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>credit.policy</th><th>count</th></tr><tr><td>i64</td><td>u32</td></tr></thead><tbody><tr><td>0</td><td>1868</td></tr><tr><td>1</td><td>7710</td></tr></tbody></table></div>"
             ],
             "text/plain": [
               "shape: (2, 2)\n",
@@ -401,12 +401,12 @@
               "│ ---           ┆ ---   │\n",
               "│ i64           ┆ u32   │\n",
               "╞═══════════════╪═══════╡\n",
-              "│ 1             ┆ 7710  │\n",
               "│ 0             ┆ 1868  │\n",
+              "│ 1             ┆ 7710  │\n",
               "└───────────────┴───────┘"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -419,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -453,7 +453,7 @@
               "└───────────────┴───────┘"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -465,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 26,
       "metadata": {
         "id": "kyZCDdzLs2A1"
       },
@@ -478,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -511,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -525,7 +525,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_81279/2077184699.py:5: UserWarning:\n",
+            "/tmp/ipykernel_7200/2077184699.py:5: UserWarning:\n",
             "\n",
             "\n",
             "\n",
