--- a/analise_02.ipynb
+++ b/analise_02.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/AutoProvision/market-analysis.notebook/blob/main/analise_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -62,9 +62,9 @@
       },
       "outputs": [],
       "source": [
-        "if not os.path.exists('pasta_extraida'):\n",
+        "if not os.path.exists('data/pasta_extraida'):\n",
         "\twith zipfile.ZipFile('planilha_2024.zip', 'r') as zip_obj:\n",
-        "\t\tzip_obj.extractall('pasta_extraida')\n",
+        "\t\tzip_obj.extractall('data/pasta_extraida')\n",
         "\t\tprint('Arquivo extraído com sucesso!')"
       ]
     },
@@ -76,9 +76,9 @@
       },
       "outputs": [],
       "source": [
-        "maio = pl.read_csv('pasta_extraida/planilha_202405.csv', separator=';', truncate_ragged_lines=True)\n",
-        "junho = pl.read_csv('pasta_extraida/planilha_202406.csv', separator=';', truncate_ragged_lines=True)\n",
-        "julho = pl.read_csv('pasta_extraida/planilha_202407.csv', separator=';', truncate_ragged_lines=True)"
+        "maio = pl.read_csv('data/pasta_extraida/planilha_202405.csv', separator=';', truncate_ragged_lines=True)\n",
+        "junho = pl.read_csv('data/pasta_extraida/planilha_202406.csv', separator=';', truncate_ragged_lines=True)\n",
+        "julho = pl.read_csv('data/pasta_extraida/planilha_202407.csv', separator=';', truncate_ragged_lines=True)"
       ]
     },
     {
@@ -649,8 +649,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
