fix codigo renomear cols

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,55 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['uf',\n",
-       " 'tcb',\n",
-       " 'sr',\n",
-       " 'clienteocupacao',\n",
-       " 'cnae_secao',\n",
-       " 'cnae_subclasse',\n",
-       " 'cliente',\n",
-       " 'ocupacao',\n",
-       " 'porte',\n",
-       " 'modalidade',\n",
-       " 'origem',\n",
-       " 'indexador']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CATEGORY_COLS"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         AC\n",
-       "1         AC\n",
-       "2         AC\n",
-       "3         AC\n",
-       "4         AC\n",
-       "          ..\n",
-       "925594    TO\n",
-       "925595    TO\n",
-       "925596    TO\n",
-       "925597    TO\n",
-       "925598    TO\n",
-       "Name: uf, Length: 925599, dtype: object"
+       "0          129021,18\n",
+       "1         1228674,44\n",
+       "2           45090,47\n",
+       "3           36282,35\n",
+       "4               0,00\n",
+       "             ...    \n",
+       "925594          0,00\n",
+       "925595        354,33\n",
+       "925596          0,00\n",
+       "925597          0,00\n",
+       "925598          0,00\n",
+       "Name: carteira_inadimplida_arrastada, Length: 925599, dtype: object"
       ]
      },
      "execution_count": 13,
@@ -248,7 +217,8 @@
     }
    ],
    "source": [
-    "df['uf']"
+    "df['uf']\n",
+    "df['carteira_inadimplida_arrastada']"
    ]
   },
   {
@@ -257,14 +227,20 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "rename() got an unexpected keyword argument 'regex'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m column \u001b[38;5;129;01min\u001b[39;00m CATEGORY_COLS:\n\u001b[0;32m     10\u001b[0m \tdf \u001b[38;5;241m=\u001b[39m convert_category_dtype(df\u001b[38;5;241m=\u001b[39mdf, column\u001b[38;5;241m=\u001b[39mcolumn)\n\u001b[1;32m---> 11\u001b[0m \tdf \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrename\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[43mcolumn\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mct_\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcolumn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlower\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mregex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m column \u001b[38;5;129;01min\u001b[39;00m INT_COLS:\n\u001b[0;32m     14\u001b[0m \tdf \u001b[38;5;241m=\u001b[39m convert_int_dtype(df\u001b[38;5;241m=\u001b[39mdf, column\u001b[38;5;241m=\u001b[39mcolumn)\n",
-      "\u001b[1;31mTypeError\u001b[0m: rename() got an unexpected keyword argument 'regex'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uf\n",
+      "tcb\n",
+      "sr\n",
+      "cliente\n",
+      "ocupacao\n",
+      "cnae_secao\n",
+      "cnae_subclasse\n",
+      "porte\n",
+      "modalidade\n",
+      "origem\n",
+      "indexador\n"
      ]
     }
    ],
@@ -275,132 +251,43 @@
     "\n",
     "\tif column in FLOAT_COLS:\n",
     "\t\tdf = convert_float_dtype(df=df, column=column)\n",
-    "\t\tdf = df.rename({column: \"vl_\" + column.lower()}, regex=True)\n",
+    "\t\tdf = df.rename(columns={column: \"vl_\" + column.lower()})\n",
     "\n",
     "\tif column in CATEGORY_COLS:\n",
     "\t\tdf = convert_category_dtype(df=df, column=column)\n",
-    "\t\tdf = df.rename({column: \"ct_\" + column.lower()}, regex=True)\n",
+    "\t\tdf = df.rename(columns={column: \"ct_\" + column.lower()})\n",
     "\n",
     "\tif column in INT_COLS:\n",
     "\t\tdf = convert_int_dtype(df=df, column=column)\n",
-    "\t\tdf = df.rename({column: \"nu_\" + column.lower()}, regex=True)"
+    "\t\tdf = df.rename(columns={column: \"nu_\" + column.lower()})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cliente</th>\n",
-       "      <th>ocupacao</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PF</td>\n",
-       "      <td>PF - Aposentado/pensionista</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PF</td>\n",
-       "      <td>PF - Aposentado/pensionista</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PF</td>\n",
-       "      <td>PF - Aposentado/pensionista</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PF</td>\n",
-       "      <td>PF - Aposentado/pensionista</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PF</td>\n",
-       "      <td>PF - Aposentado/pensionista</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>925594</th>\n",
-       "      <td>PJ</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>925595</th>\n",
-       "      <td>PJ</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>925596</th>\n",
-       "      <td>PJ</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>925597</th>\n",
-       "      <td>PJ</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>925598</th>\n",
-       "      <td>PJ</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>925599 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       cliente                     ocupacao\n",
-       "0           PF  PF - Aposentado/pensionista\n",
-       "1           PF  PF - Aposentado/pensionista\n",
-       "2           PF  PF - Aposentado/pensionista\n",
-       "3           PF  PF - Aposentado/pensionista\n",
-       "4           PF  PF - Aposentado/pensionista\n",
-       "...        ...                          ...\n",
-       "925594      PJ                            -\n",
-       "925595      PJ                            -\n",
-       "925596      PJ                            -\n",
-       "925597      PJ                            -\n",
-       "925598      PJ                            -\n",
-       "\n",
-       "[925599 rows x 2 columns]"
+       "Index(['data_base', 'ct_uf', 'ct_tcb', 'ct_sr', 'ct_cliente', 'ct_ocupacao',\n",
+       "       'ct_cnae_secao', 'ct_cnae_subclasse', 'ct_porte', 'ct_modalidade',\n",
+       "       'ct_origem', 'ct_indexador', 'nu_numero_de_operacoes',\n",
+       "       'vl_a_vencer_ate_90_dias', 'vl_a_vencer_de_91_ate_360_dias',\n",
+       "       'vl_a_vencer_de_361_ate_1080_dias', 'vl_a_vencer_de_1081_ate_1800_dias',\n",
+       "       'vl_a_vencer_de_1801_ate_5400_dias', 'vl_a_vencer_acima_de_5400_dias',\n",
+       "       'vl_vencido_acima_de_15_dias', 'vl_carteira_ativa',\n",
+       "       'vl_carteira_inadimplida_arrastada', 'vl_ativo_problematico'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['cliente', 'ocupacao']]"
+    "df.columns"
    ]
   },
   {
@@ -487,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -497,13 +384,13 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_menor_15\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma_vencer_ate_90_dias\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts()\n",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_menor_15\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma_vencer_ate_90_dias\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts()\n",
       "\u001b[1;31mNameError\u001b[0m: name 'df_menor_15' is not defined"
      ]
     }
    ],
    "source": [
-    "df_menor_15['a_vencer_ate_90_dias'].value_counts()"
+    "# df_menor_15['a_vencer_ate_90_dias'].value_counts()"
    ]
   },
   {
