separacao pf e pj

--- a/analysis_pj.ipynb
+++ b/analysis_pj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['ct_classificacao'] == 'PJ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +54,7 @@
        "ct_ocupacao                                category\n",
        "ct_cnae_secao                              category\n",
        "ct_cnae_subclasse                          category\n",
-       "ct_porte                                   category\n",
+       "ct_porte                                     object\n",
        "ct_modalidade                              category\n",
        "ct_origem                                  category\n",
        "ct_indexador                               category\n",
@@ -60,10 +69,11 @@
        "vl_carteira_ativa                           float64\n",
        "vl_carteira_inadimplida_arrastada           float64\n",
        "vl_ativo_problematico                       float64\n",
+       "ct_classificacao                             object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,6 +81,13 @@
    "source": [
     "df.dtypes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
