--- a/etl.ipynb
+++ b/etl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "Name: carteira_inadimplida_arrastada, Length: 925599, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,27 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uf\n",
-      "tcb\n",
-      "sr\n",
-      "cliente\n",
-      "ocupacao\n",
-      "cnae_secao\n",
-      "cnae_subclasse\n",
-      "porte\n",
-      "modalidade\n",
-      "origem\n",
-      "indexador\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['data_base'] = pd.to_datetime(df['data_base'], format=\"%Y-%m-%d\")\n",
     "\n",
@@ -265,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +264,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,61 +275,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "data_base\n",
-       "2024-07-31    925599\n",
+       "ct_porte\n",
+       "PJ - Pequeno                                     294014\n",
+       "PJ - Micro                                       255844\n",
+       "PJ - Médio                                       182982\n",
+       "PJ - Grande                                       38038\n",
+       "PF - Mais de 5 a 10 salários mínimos              19275\n",
+       "PF - Mais de 3 a 5 salários mínimos               18712\n",
+       "PF - Acima de 20 salários mínimos                 18083\n",
+       "PF - Mais de 1 a 2 salários mínimos               18036\n",
+       "PF - Mais de 10 a 20 salários mínimos             17984\n",
+       "PF - Mais de 2 a 3 salários mínimos               17429\n",
+       "PF - Até 1 salário mínimo                         14689\n",
+       "PJ - Indisponível                                 12986\n",
+       "PF - Indisponível                                 11466\n",
+       "PF - Sem rendimento                                6061\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['data_base'].value_counts()"
+    "df['ct_porte'].value_counts()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nu_numero_de_operacoes\n",
-       "15        698300\n",
-       "16          7209\n",
-       "17          6511\n",
-       "18          6022\n",
-       "19          5654\n",
-       "           ...  \n",
-       "19839          1\n",
-       "65897          1\n",
-       "11533          1\n",
-       "112712         1\n",
-       "31291          1\n",
-       "Name: count, Length: 13769, dtype: int64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df['nu_numero_de_operacoes'].value_counts()"
+    "Vamos separar coluna ct_porte em duas colunas:\n",
+    "\n",
+    "ct_classificacao , que é o substring(0:2) de ct_porte\n",
+    "\n",
+    "ct_tamanho , que é o substring(5:) de ct_porte"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['ct_classificacao'] = df['ct_porte'].apply(lambda x: x[0:2])\n",
+    "df['ct_porte'] = df['ct_porte'].apply(lambda x: x[5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +345,7 @@
        "ct_ocupacao                                category\n",
        "ct_cnae_secao                              category\n",
        "ct_cnae_subclasse                          category\n",
-       "ct_porte                                   category\n",
+       "ct_porte                                     object\n",
        "ct_modalidade                              category\n",
        "ct_origem                                  category\n",
        "ct_indexador                               category\n",
@@ -376,10 +360,11 @@
        "vl_carteira_ativa                           float64\n",
        "vl_carteira_inadimplida_arrastada           float64\n",
        "vl_ativo_problematico                       float64\n",
+       "ct_classificacao                             object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
