--- a/analysis_pj.ipynb
+++ b/analysis_pj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "pd.options.display.float_format = '{:.2f}'.format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +57,7 @@
        "ct_cnae_secao                              category\n",
        "ct_cnae_subclasse                          category\n",
        "ct_porte                                     object\n",
-       "ct_modalidade                              category\n",
+       "ct_modalidade                                object\n",
        "ct_origem                                  category\n",
        "ct_indexador                               category\n",
        "nu_numero_de_operacoes                        int64\n",
@@ -69,11 +71,13 @@
        "vl_carteira_ativa                           float64\n",
        "vl_carteira_inadimplida_arrastada           float64\n",
        "vl_ativo_problematico                       float64\n",
+       "﻿data_base                                   object\n",
        "ct_classificacao                             object\n",
+       "vl_carteira_ativa_n_arrastada               float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
